--- a/index.html
+++ b/index.html
@@ -8,21 +8,18 @@
   </head>
   <body>
     <header>
-      <section class="flex">
-        <div class="logo">logo</div>
-        <div class="list">
+      <section class="flex header-section">
+        <div class="div-header logo">logo</div>
+        <div class="div-header link">
           <a href="#">link</a>
           <a href="#">link</a>
           <a href="#">link</a>
           <a href="#">link</a>
           <a href="#">link</a>
         </div>
-        <div class="login">login</div>
+        <div class="div-header login">
+          login
+        </div>
       </section>
     </header>
-
-    <main></main>
-
-    <footer></footer>
-  </body>
 </html>
