add: double box section

--- a/index.html
+++ b/index.html
@@ -22,4 +22,31 @@
         </div>
       </section>
     </header>
+
+    <body>
+      <div class=" flex bluebkg">
+        <section class=" single-box">
+
+        </section>
+      </div>
+      <div class="flex column-div">
+        <section class="flex">
+          <div class="big-col"></div>
+          <div class="small-col"></div>
+        </section>
+      </div>
+      <div class="flex column-div graybkg">
+        <section class="flex">
+          <div class="small-col"></div>
+          <div class="big-col"></div>
+        </section>
+      </div>
+      <div class="flex column-div">
+        <section class="flex">
+          <div class="big-col"></div>
+          <div class="small-col"></div>
+        </section>
+      </div>
+      
+    </body>
 </html>
