--- a/index.html
+++ b/index.html
@@ -17,17 +17,13 @@
           <a href="#">link</a>
           <a href="#">link</a>
         </div>
-        <div class="div-header login">
-          login
-        </div>
+        <div class="div-header login">login</div>
       </section>
     </header>
 
-    <body>
-      <div class=" flex bluebkg">
-        <section class=" single-box">
-
-        </section>
+    <main>
+      <div class="flex bluebkg">
+        <section class="single-box"></section>
       </div>
       <div class="flex column-div">
         <section class="flex">
@@ -47,6 +43,28 @@
           <div class="small-col"></div>
         </section>
       </div>
-      
-    </body>
+      <div class="big-box flex">
+        <section class="green-box"></section>
+      </div>
+    </main>
+    <footer>
+      <div class="flex blackbkg1">
+        <section class="flex">
+          <div class="pink-col"></div>
+          <div class="flex blue-col">
+            <div class="little-col"></div>
+            <div class="little-col"></div>
+            <div class="little-col"></div>
+            <div class="little-col"></div>
+          </div>
+        </section>
+      </div>
+      <div class="flex blackbkg2">
+        <section class="flex footersection">
+          <div class="footerdiv">Logo</div>
+          <div class="footerdiv">Bottone</div>
+        </section>
+      </div>
+    </footer>
+  </body>
 </html>
