add: css padding section

--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
     </header>
 
     <main>
-      <div class="flex bluebkg">
+      <div class="flex bluebkg main-secion">
         <section class="single-box"></section>
       </div>
-      <div class="flex column-div">
+      <div class="flex column-div main-secion">
         <section class="flex">
           <div class="big-col"></div>
           <div class="small-col"></div>
         </section>
       </div>
-      <div class="flex column-div graybkg">
+      <div class="flex column-div graybkg main-secion">
         <section class="flex">
           <div class="small-col"></div>
           <div class="big-col"></div>
         </section>
       </div>
-      <div class="flex column-div">
+      <div class="flex column-div main-secion">
         <section class="flex">
           <div class="big-col"></div>
           <div class="small-col"></div>
         </section>
       </div>
-      <div class="big-box flex">
+      <div class="big-box flex main-secion">
         <section class="green-box"></section>
       </div>
     </main>
@@ -59,7 +59,7 @@
           </div>
         </section>
       </div>
-      <div class="flex blackbkg2">
+      <div class="flex blackbkg2 main-secion">
         <section class="flex footersection">
           <div class="footerdiv">Logo</div>
           <div class="footerdiv">Bottone</div>
